36515 Migrate SimpleFilterResolverJsonbV2IT tests to v2 Refactored the tests